# discord-security

./: .gitignore  CMakeLists.txt  DiscordSentinel.sln  DiscordSentinel.vcxproj  LICENSE  README.md
src/: app_version.h  console_color.cpp  console_color.h  console_window.cpp  console_window.h  dashboard.cpp  dashboard.h  logger.cpp  logger.h  main.cpp  monitoring.cpp  monitoring.h  process_utils.cpp  process_utils.h  token_clear.cpp  token_clear.h  tray.cpp  tray.h  utils.cpp  utils.h
